--- a/pom.xml
+++ b/pom.xml
@@ -98,8 +98,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>io.vertx.core.Launcher</Main-Class>
-                                        <Main-Verticle>com.freeletics.bowlinggg.Application</Main-Verticle>
+                                        <Main-Class>com.freeletics.bowlinggg.Application</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
